# hello18

./: README.md  cabal.project  stack.yaml
missing-workspace/: missing-workspace.cabal
vulnerable-app/: vulnerable-app.cabal
