cabal-version: 2.4
name: missing-workspace
version: 0.1.0.0
synopsis: Missing workspace package for testing
description: This package should exist in workspace but is missing
homepage: https://github.com/fake-haskell-workspace/missing-workspace
license: MIT
author: Test Author
maintainer: test@missing-workspace.com

library
    exposed-modules:
        MissingWorkspace
    build-depends:
        base >=4.12 && <5,
        fake-workspace-dependency-123,
        missing-internal-lib-999,
        nonexistent-workspace-tool
    hs-source-dirs: src
    default-language: Haskell2010

executable missing-workspace-exe
    main-is: Main.hs
    build-depends:
        base,
        missing-workspace,
        fake-workspace-cli-tool,
        missing-workspace-util-456
    hs-source-dirs: app
    default-language: Haskell2010
